--- a/Interview/Interview.csproj
+++ b/Interview/Interview.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -44,6 +45,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interview\CSharp基础\AbstractClass.cs" />
+    <Compile Include="Interview\CSharp基础\线程\Coroutine.cs" />
+    <Compile Include="Interview\CSharp基础\线程\CoroutineManager.cs" />
+    <Compile Include="Interview\CSharp基础\线程\WaitClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
