--- a/Graphic_cpp/TestCompiler/CMakeLists.txt
+++ b/Graphic_cpp/TestCompiler/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required (VERSION 2.8.11)
+# cmake_minimum_required (VERSION 2.8.11)
 project (TestProject)
 
 # find_package(Eigen3 REQUIRED)
